# dora

./: .dockerignore  .dockeringore  .gitignore  LICENSE.txt  README.md  TODO.md  build.sh  buildV2.sh  runlocal.sh  video1.md
adm/: index.js  package.json  version.js
api/: .dockerignore  Dockerfile  index.js  package.json  version.js
api/src/: _old_compare.js  api.js
app/: package.json  vue.config.js
app/public/: index.html
app/src/: App.vue  main.js  registerServiceWorker.js
cli/: .dockerignore  Dockerfile  genadmin.js  gentest.js  index.js  package.json  resource.yaml  version.js
controlplane/: .dockerignore
doc/: PWMDependecyTree  build.sh  index.js  package-lock.json  package.json
download/: build.sh  build_all_targets.sh  build_pwm_v.sh  package.json  update.sh
electron-app/: package.json  vue.config.js
lib/: index.js  package-lock.json  package.json
node-client/: .dockerignore  Dockerfile  dockercreate  dummy.js  index.js  indexWs.js  myvol-nfs-new  package.json  testdocker.js  testdocker2.js  version.js
node-client-updater/: index.js  package.json
node-sync/: Dockerfile  index.js  package.json
scripts/: build.sh  build_prom.sh  runlocal.sh
tiny/: Dockerfile
v2/: .dockerignore
v2/scheduler-rust/: Cargo.toml  Dockerfile  backfill_scheduler.js  backfill_scheduler_2.js  backfill_test.js  backfill_test_2.js  backfill_test_with_date.js  build.sh
v2/scheduler-rust/src/: code.rs  main.rs  test_scylla.rs
v2/scheduler-rust/src/crud/: mod.rs
v2/scheduler-rust/src/resources/: mod.rs
v2/scheduler-rust/src/scheduler/: assign.rs  mod.rs
(+561 files in other folders)
